--- a/index.html
+++ b/index.html
@@ -21,4 +21,66 @@
 			<li> <a href="./resume.html"> Resume </a> </li>
 	</ul>
 </div>
+
+<div id="main">
+	<h2 class="titletop"> Trevor's Background </h2>
+	<p>
+	I have lived in the same house in Dubuque, Iowa for my entire life. Dubuque has grown to be a very nice city over the 
+	years with additions like The Port of Dubuque located along the Mississippi River, the Dubuque Fighting Saints hockey program and newly constructed Mystique Ice Center, 
+	and the never ending expansion onto the west end of town. I grew up on the ice playing travel hockey with my best friends and it has always been my favorite sport along with
+	the occasional game of street football. I have one brother, Kyle who is twenty six, my mother, Coleen, and my dad, Brett. They are all very nice people. 
+	</p>
+	
+	<p>
+	I attended Dubuque Senior High School where I excelled on the track and field and hockey teams. I worked my first job at a local grocery store by my house followed
+	by a Nordstrom's delivery center where I unloaded inventory from semis each day. Not the most fun jobs, but the pay check was always nice even though I spent the
+	majority of my earnings on shoes which no longer fit me. After high school I began my career here at The University of Iowa as an overwhelmed and unorganized freshman. 
+	</p>
+	
+	<p>
+	I am currently a junior in the Tippie College of Business studying BAIS. This past summer I interned at IBM in Dubuque, Iowa in the audit and compliance department. 
+	I received a lot of great experience as well as dipped my toes into the real world of business. This coming summer of 2014 I will be interning in Des Moines, Iowa 
+	at Berkley Technology Services as a financial systems analyst. In my free time I enjoy snowboarding, traveling, playing hockey, and engaging in those other 
+	activities college students are so fond of. After graduation I plan on taking my talents to Colorado and living happily ever after. 
+	</p>
+  
+<br /><br />
+	
+	<h2 class="title"> Favorite Sports Teams and Athletes</h2>
+		<ul>
+			<li> <a href="http://capitals.nhl.com/"> NHL: Washington Capitals</a></li>
+			<li> <a href="http://www.detroitlions.com/"> NFL: Detroit Lions</a></li>
+			<li> <a href="http://chicago.whitesox.mlb.com/index.jsp?c_id=cws&sv=1"> MLB: Chicago White Sox</a></li>
+			<li> <a href="http://www.nba.com/tvc/index.html?gamecode=20140129/OKCMIA&brand=OKC"> NBA: Oklahoma City Thunder</a></li>
+			<li> <a href="http://www.jasondufnergolf.com/"> Golf: Jason Dufner</a></li>
+		<ul>
+<br /><br />
+	
+	<h2 class="title"> Trevor's Favorite Things </h2>
+		<ul>
+			<li> Snowboarding, Snowmobiling, Golf, Hockey </li>
+			<li> Filming with GoPro </li>
+			<li> Editing film with Final Cut Pro X </li>
+			<li> Watching movies (Favorites: Happy Gilmore, The Town, Blow, Dumb and Dumber </li>
+			<li> Scrambled Eggs, Jalapeno Kettle Cooked Chips, Pizza, Chocolate Chip Cookies, etc. </li>
+			<li> The Office, The Fresh Prince of Bel-Aire, Entourage, Breaking Bad </li>
+			<li> A cold one on a hot summer day </li>
+		</ul>
+		
+<br /><br />
+
+	<h2 class="title"> Trevor's Playlist </h2>
+		<ul>
+			<li> Kid Cudi </li>
+			<li> The Killers </li>
+			<li> Mumford and Sons </li>
+			<li> Jay Z </li>
+			<li> The Naked and Famous </li>
+			<li> Kendrick Lamar</li>
+			<li> Macklemore </li>
+			<li> OAR </li>
+		</ul>
+</div>
+
+	
 </body>
