--- a/index.html
+++ b/index.html
@@ -8,17 +8,25 @@
 </head>
 
 <body>
+	
+	<div id="right_sidebar">
+	
+		<div class="polaroid"> <img src="./Vail1.jpg" alt="Vail Pass" title="Vail Pass" width="300px" /> <br /><span> Snowmobiling at Vail Pass </span></div>
 
+		<div class="polaroid"> <img src="./Montana2.jpg" alt="Montana" title="Montana" width="300px" /> <br /><span> Snowboarding in Montana </span></div>
+	
+	</div>
+	
 <div id="wrap">
 <div id="header">
 	<h1 class="title"> Trevor Hein <h1>
 </div>
 <div id="nav">
 	<ul>
-			<li> <a href="http://www.linkedin.com/pub/trevor-hein/53/77/a03"> LinkedIn </a></li>
-			<li> <a href="https://github.com/TrevorHein1"> Github </a></li>
-			<li> <a href="https://www.facebook.com/trevor.hein.77"> FaceBook </a></li>
-			<li> <a href="./resume.html"> Resume </a> </li>
+		<li> <a href="http://www.linkedin.com/pub/trevor-hein/53/77/a03"> LinkedIn </a></li>
+		<li> <a href="https://github.com/TrevorHein1"> Github </a></li>
+		<li> <a href="https://www.facebook.com/trevor.hein.77"> FaceBook </a></li>
+		<li> <a href="./resume.html"> Resume </a> </li>
 	</ul>
 </div>
 
@@ -44,42 +52,42 @@
 	activities college students are so fond of. After graduation I plan on taking my talents to Colorado and living happily ever after. 
 	</p>
   
-<br /><br />
+<br />
 	
 	<h2 class="title"> Favorite Sports Teams and Athletes</h2>
-		<ul>
-			<li> <a href="http://capitals.nhl.com/"> NHL: Washington Capitals</a></li>
-			<li> <a href="http://www.detroitlions.com/"> NFL: Detroit Lions</a></li>
-			<li> <a href="http://chicago.whitesox.mlb.com/index.jsp?c_id=cws&sv=1"> MLB: Chicago White Sox</a></li>
-			<li> <a href="http://www.nba.com/tvc/index.html?gamecode=20140129/OKCMIA&brand=OKC"> NBA: Oklahoma City Thunder</a></li>
-			<li> <a href="http://www.jasondufnergolf.com/"> Golf: Jason Dufner</a></li>
-		<ul>
-<br /><br />
+	<ul>
+		<li> <a href="http://capitals.nhl.com/"> NHL: Washington Capitals</a></li>
+		<li> <a href="http://www.detroitlions.com/"> NFL: Detroit Lions</a></li>
+		<li> <a href="http://chicago.whitesox.mlb.com/index.jsp?c_id=cws&sv=1"> MLB: Chicago White Sox</a></li>
+		<li> <a href="http://www.nba.com/tvc/index.html?gamecode=20140129/OKCMIA&brand=OKC"> NBA: Oklahoma City Thunder</a></li>
+		<li> <a href="http://www.jasondufnergolf.com/"> Golf: Jason Dufner</a></li>
+	<ul>
+<br />
 	
 	<h2 class="title"> Trevor's Favorite Things </h2>
-		<ul>
-			<li> Snowboarding, Snowmobiling, Golf, Hockey </li>
-			<li> Filming with GoPro </li>
-			<li> Editing film with Final Cut Pro X </li>
-			<li> Watching movies (Favorites: Happy Gilmore, The Town, Blow, Dumb and Dumber </li>
-			<li> Scrambled Eggs, Jalapeno Kettle Cooked Chips, Pizza, Chocolate Chip Cookies, etc. </li>
-			<li> The Office, The Fresh Prince of Bel-Aire, Entourage, Breaking Bad </li>
-			<li> A cold one on a hot summer day </li>
-		</ul>
+	<ul>
+		<li> Snowboarding, Snowmobiling, Golf, Hockey </li>
+		<li> Filming with GoPro </li>
+		<li> Editing film with Final Cut Pro X </li>
+		<li> Watching movies (Favorites: Happy Gilmore, The Town, Blow, Dumb and Dumber </li>
+		<li> Scrambled Eggs, Jalapeno Kettle Cooked Chips, Pizza, Chocolate Chip Cookies, etc. </li>
+		<li> The Office, The Fresh Prince of Bel-Aire, Entourage, Breaking Bad </li>
+		<li> A cold one on a hot summer day </li>
+	</ul>
 		
-<br /><br />
+<br />
 
 	<h2 class="title"> Trevor's Playlist </h2>
-		<ul>
-			<li> Kid Cudi </li>
-			<li> The Killers </li>
-			<li> Mumford and Sons </li>
-			<li> Jay Z </li>
-			<li> The Naked and Famous </li>
-			<li> Kendrick Lamar</li>
-			<li> Macklemore </li>
-			<li> OAR </li>
-		</ul>
+	<ul>
+		<li> Kid Cudi </li>
+		<li> The Killers </li>
+		<li> Mumford and Sons </li>
+		<li> Jay Z </li>
+		<li> The Naked and Famous </li>
+		<li> Kendrick Lamar</li>
+		<li> Macklemore </li>
+		<li> OAR </li>
+	</ul>
 </div>
 
 	
