--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
 	
 	
 <br />
-		<div id="right_sidebar">
+		<div id="photos">
 	
 		<div class="polaroid"> <img src="./Vail1.jpg" alt="Vail Pass" title="Vail Pass" width="300px" /> <br /><span> Snowmobiling at Vail Pass </span></div>
 
-		<div class="polaroid"> <img src="./Montana2.jpg" alt="Montana" title="Montana" width="300px" /> <br /><span> Snowboarding in Montana </span></div>
+		<div class="polaroid"> <img src="./Montana2.jpg" alt="Montana" title="Montana" width="300px"/> <br /><span> Snowboarding in Montana </span></div>
 	
 	</div>
 		
@@ -92,7 +92,7 @@
 	
 </div>
 
-<div class="footer"> &copy; Trevor Hein </div>
+<div class="footer"> &copy; Trevor Hein Software Design and Development. </div>
 
 	
 </body>
