--- a/resume.html
+++ b/resume.html
@@ -8,9 +8,99 @@
 </head>
 
 <body>
+<div>
 
-	<div id="header"> Trevor Hein's Resume Spring 2014 </h1>
-	</div>
+<h1> Trevor Hein </h1>
+307 S. Linn Street #311, Iowa City, IA 52240    
+Trevor-Hein@uiowa.edu
+563-513-1073 
+
+<h2> Objective </h2>
+
+<p> To attain a meaningful position in the consulting, financial systems, or project management field for utilization of my information technology and 
+analytics experience while earning my bachelors degree in Business Analytics and Information Systems. </P>
+
+<h2> Education </h2>
+<p> University of Iowa Iowa City, IA   GPA: 3.38/4.0 </p>	
+<p>BAIS Major, Expected Graduation date spring 2015 </p>
+
+<h2> Computer Skills </h2>
+<table border="1" cellpadding="3">
+ <tr>
+ <td> Lotus Notes </td>
+ <td> Visual Basic</td>
+ <td> Microsoft Office </td>
+ <td> Final Cut Pro X </td>
+ </tr>
+ </table> 
+
+<div>
+<h2> Related Coursework </h2>
+<table border="1" cellpadding="3">
+	<tr>
+		<td>Computer Analysis</td>
+		<td>Financial Management</td>		
+		<td>Operations Management</td>
+	</tr>
+	<tr>
+		<td>Database Management</td>
+		<td>Financial/Managerial Accounting</td>		
+		<td> Statistics for Strategy</td>
+	</tr>
+	<tr>
+		<td>Business Programming </td>
+		<td>Information Systems </td>
+		<td>Software Design and Development </td>
+	</tr>
+</table>
+</div>
+
+<div>
+<h2> Professional Experience </h2>
+<h3> IBM, Dubuque, IA (Audit and Compliance Intern) </h3>
+<p>June 2013- September 2013 </p>
+
+<ul>
+	
+<li> Managed and coordinated the Dubuque summer intern project </li>
+<li> Assigned access rights, re-certified users, and terminated access rights using URT reports and Secondary Controls. </li>
+<li> Constructed pivot tables to organize employee IDs by designated manager. </li>
+<li> Formulated an efficient step-by-step ID management process for managers to remove and reassign IDs. </li>
+<li> Educated managers on the use of the new URT ID process. </li>
+<li> Participated in developing a more efficient problem and change ticket grading system. </li>
+<li> Helped organize and promote the American Red Cross/IBM blood drive for summer of 2013. </li>
+<li> Volunteered for IBM Bring Your Child to Work Day 2013. </li>
+<li> Volunteered for IBM EXITE/IGNITE Summer Camp. </li>
+
+</ul>
+
+<h3> Mutual of Omaha, Iowa City, IA (Financial Representative Intern) </h3>
+<p> August 2013- November 2013 </p>
+<ul>
+<li> Informed clients of our insurance products and services </li>
+<li> Arranged client meetings </li>
+<li> Organized hundreds of client contacts by date of contact. </li>
+
+</ul>
+
+<h3> Coborns Inc., Save-A-Lot, Dubuque, IA </h3>
+June 2009- June 2011
+
+<h3> Nordstroms Warehouse, Dubuque, IA </h3>
+June 2011- August 2011
+</div>
+
+<div>
+
+<h2> Other Activities </h2>
+<ul>
+<li> Health and Life Insurance Licenses in the state of Iowa (April 2013) </li>
+<li> HAWKTRADE Stock and Investment Club (Market Researcher Fall 2013) </li>
+<li> Two by Two Animal Campus NPO Volunteer (2008- Current) </li>
+<li> TIME Person of the Year 2006 </li>
+</ul>
+
+</div>
 	
 	<div>
 	<li> <a href="./index.html"> Home Page </a> </li>
