--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
 </head>
 
 <body>
-	
 <div id="wrap">
+
 <div id="header">
-	<h1 class="title"> Trevor Hein <h1>
+	<h1 class="title"> Trevor Hein </h1>
 </div>
+
 <div id="nav">
-	
+	<ul>
 		<li> <a href="http://www.linkedin.com/pub/trevor-hein/53/77/a03"> LinkedIn </a></li>
 		<li> <a href="https://github.com/TrevorHein1"> Github </a></li>
 		<li> <a href="https://www.facebook.com/trevor.hein.77"> FaceBook </a></li>
 		<li> <a href="./resume.html"> Resume </a> </li>
-
+	</ul>
 </div>
 
 <div id="main">
@@ -47,40 +48,34 @@
   
 <br />
 	
-	<h2 class="title"> Favorite Sports Teams and Athletes</h2>
+	<h3 class="title"> Favorite Sports Teams and Athletes</h3>
 	<ul>
 		<li> <a href="http://capitals.nhl.com/"> Washington Capitals</a></li>
 		<li> <a href="http://www.detroitlions.com/"> Detroit Lions</a></li>
-		<li> <a href="http://chicago.whitesox.mlb.com/index.jsp?c_id=cws&sv=1"> Chicago White Sox</a></li>
-		<li> <a href="http://www.nba.com/tvc/index.html?gamecode=20140129/OKCMIA&brand=OKC"> Oklahoma City Thunder</a></li>
+		<li> <a href="http://chicago.whitesox.mlb.com"> Chicago White Sox</a></li>
+		<li> <a href="http://www.nba.com/thunder"> Oklahoma City Thunder</a></li>
 		<li> <a href="http://www.jasondufnergolf.com/"> Jason Dufner</a></li>
-	<ul>
+	</ul>
 <br />
 	
-	<h3 class="favorites"> Trevor's Favorite Things </h3>
-	
+	<h3 class="title"> Trevor's Favorite Things </h3>
+	<ul>
 		<li> Snowboarding, Snowmobiling, Golf, Hockey </li>
 		<li> Filming with GoPro </li>
 		<li> Editing film with Final Cut Pro X </li>
-		<li> Watching movies (Favorites: Happy Gilmore, The Town, Blow, Dumb and Dumber </li>
+		<li> Watching movies (Favorites: Happy Gilmore, The Town, Blow, Dumb and Dumber) </li>
 		<li> Scrambled Eggs, Jalapeno Kettle Cooked Chips, Pizza, Chocolate Chip Cookies, etc. </li>
 		<li> The Office, The Fresh Prince of Bel-Aire, Entourage, Breaking Bad </li>
 		<li> A cold one on a hot summer day </li>
+	</ul>
 	
-	
-<br />
-		<div id="photos">
-	
-		<div class="polaroid"> <img src="./Vail1.jpg" alt="Vail Pass" title="Vail Pass" width="300px" /> <br /><span> Snowmobiling at Vail Pass </span></div>
+		<div id="photo1"> <img src="./Vail1.jpg" alt="Vail Pass" title="Vail Pass" width="300px" /> <br /><span> Snowmobiling at Vail Pass </span></div>
 
-		<div class="polaroid"> <img src="./Montana2.jpg" alt="Montana" title="Montana" width="300px"/> <br /><span> Snowboarding in Montana </span></div>
-	
-	</div>
-		
-<br />
+		<div id="photo2"> <img src="./Montana2.jpg" alt="Montana" title="Montana" width="300px"/> <br /><span> Snowboarding in Montana </span></div>
 
+<div>
 	<h3 class="title"> Trevor's Playlist </h3>
-	
+	<ul id="music">
 		<li> Kid Cudi </li>
 		<li> The Killers </li>
 		<li> Mumford and Sons </li>
@@ -89,10 +84,15 @@
 		<li> Kendrick Lamar</li>
 		<li> Macklemore </li>
 		<li> OAR </li>
-	
+	</ul>
+
 </div>
 
 <div class="footer"> &copy; Trevor Hein Software Design and Development. </div>
+
+</div>
+</div>
+
 
 	
 </body>
