--- a/resume.html
+++ b/resume.html
@@ -5,15 +5,33 @@
 
 <head>
 	<title> Trevor Hein's Resume </title>
-</head>
+	<link rel="stylesheet" type="text/css" href="./style2.css" /> 
+</head
 
 <body>
-<div>
+<div id="wrap">
+<div id="resume">
+<div id="header">
 
-<h1> Trevor Hein </h1>
-307 S. Linn Street #311, Iowa City, IA 52240    
-Trevor-Hein@uiowa.edu
-563-513-1073 
+	<h1> Trevor Hein's Resume </h1>
+</div>
+
+
+<div id="header2">
+		<a href="./index.html"> Home Page </a>
+</div>
+
+<div id="contacts">
+
+<ul>
+	<li> Address:  307 S. Linn Street #311, Iowa City, IA 52240 </li> 
+	<li> E-Mail: Trevor-Hein@uiowa.edu </li>
+	<li> Phone: 563-513-1073 </li>
+</ul>
+
+</div>
+
+
 
 <h2> Objective </h2>
 
@@ -34,7 +52,7 @@ analytics experience while earning my bachelors degree in Business Analytics and
  </tr>
  </table> 
 
-<div>
+
 <h2> Related Coursework </h2>
 <table border="1" cellpadding="3">
 	<tr>
@@ -53,9 +71,9 @@ analytics experience while earning my bachelors degree in Business Analytics and
 		<td>Software Design and Development </td>
 	</tr>
 </table>
-</div>
 
-<div>
+
+
 <h2> Professional Experience </h2>
 <h3> IBM, Dubuque, IA (Audit and Compliance Intern) </h3>
 <p>June 2013- September 2013 </p>
@@ -88,9 +106,9 @@ June 2009- June 2011
 
 <h3> Nordstroms Warehouse, Dubuque, IA </h3>
 June 2011- August 2011
-</div>
 
-<div>
+
+
 
 <h2> Other Activities </h2>
 <ul>
@@ -101,10 +119,7 @@ June 2011- August 2011
 </ul>
 
 </div>
-	
-	<div>
-	<li> <a href="./index.html"> Home Page </a> </li>
-	</div>
+<div id="footer"> &copy; Trevor Hein Software Design and Development. </div>
 	
 </body>
 
