Final Commit All Files

--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
 		<li> Filming with GoPro </li>
 		<li> Editing film with Final Cut Pro X </li>
 		<li> Watching movies (Favorites: Happy Gilmore, The Town, Blow, Dumb and Dumber) </li>
-		<li> Scrambled Eggs, Jalapeno Kettle Cooked Chips, Pizza, Chocolate Chip Cookies, etc. </li>
+		<li> Scrambled Eggs, Jalapeno Kettle Cooked Chips, Pizza, Chocolate Chip Cookies. </li>
 		<li> The Office, The Fresh Prince of Bel-Aire, Entourage, Breaking Bad </li>
 		<li> A cold one on a hot summer day </li>
 	</ul>
-	
+<div id="photos">
 		<div id="photo1"> <img src="./Vail1.jpg" alt="Vail Pass" title="Vail Pass" width="300px" /> <br /><span> Snowmobiling at Vail Pass </span></div>
 
 		<div id="photo2"> <img src="./Montana2.jpg" alt="Montana" title="Montana" width="300px"/> <br /><span> Snowboarding in Montana </span></div>
-
+</div>
 <div>
 	<h3 class="title"> Trevor's Playlist </h3>
 	<ul id="music">
