--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,8 @@
 <head>
 	<title> Trevor Hein's Resume </title>
 	<link rel="stylesheet" type="text/css" href="./style2.css" /> 
-</head
+	<link rel="stylesheet" type="text/css" media="print" href="./print.css" />
+</head>
 
 <body>
 <div id="wrap">
@@ -36,14 +37,14 @@
 <h2> Objective </h2>
 
 <p> To attain a meaningful position in the consulting, financial systems, or project management field for utilization of my information technology and 
-analytics experience while earning my bachelors degree in Business Analytics and Information Systems. </P>
+analytics experience while earning my bachelors degree in Business Analytics and Information Systems. </p>
 
 <h2> Education </h2>
 <p> University of Iowa Iowa City, IA   GPA: 3.38/4.0 </p>	
-<p>BAIS Major, Expected Graduation date spring 2015 </p>
+<p> BAIS Major, Expected Graduation date spring 2015 </p>
 
 <h2> Computer Skills </h2>
-<table border="1" cellpadding="3">
+<table border="1" cellpadding="3" >
  <tr>
  <td> Lotus Notes </td>
  <td> Visual Basic</td>
@@ -119,8 +120,11 @@ June 2011- August 2011
 </ul>
 
 </div>
+
 <div id="footer"> &copy; Trevor Hein Software Design and Development. </div>
-	
+
+</div>
+
 </body>
 
 </html>
